--- a/src/Pages/Login Page/Login.css
+++ b/src/Pages/Login Page/Login.css
@@ -6,6 +6,13 @@
     justify-content: center;
 }
 
+.Login-header {
+    background-color: #141414;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .Login-popup {
     background-color: #1b1c1d;
     padding: 2rem;
