--- a/src/Pages/Cue Input/CueInput.css
+++ b/src/Pages/Cue Input/CueInput.css
@@ -1,4 +1,4 @@
-.HomePage-header {
+.CueInput-header {
     background-color: #141414;
     display: flex;
     align-items: center;
@@ -9,7 +9,7 @@
     color: white;
 }
 
-.HomePage-body {
+.CueInput-body {
     background-color: #141414;
     min-height: 92vh;
     display: flex;
@@ -18,11 +18,6 @@
     margin: 0;
     padding: 0;
     overflow-x:hidden;
-    overflow-y: hidden;
-}
-
-.container{
-    overflow-x: hidden;
     overflow-y: hidden;
 }
 
@@ -40,13 +35,12 @@
   padding: 2%;
 }
 
-.HomePage-Project1{
-    min-width: 400px;
-    max-width: 400px;
-    width: 100%;
+.CueInput-Cue{
+    width: 350px;
+    height: 700px;
     background-color: #1b1c1d;
     color: #fff6ee;
-    border-radius: 4%;
+    border-radius: 5%;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     padding-left: 3%;
     flex-shrink: 0;
@@ -122,15 +116,48 @@
     font-style: normal;
   }
 
-  .scroll-container {
-    flex-grow: .75;
+.scroll-container-cueInput {
+    display: flex;
     overflow-x: auto;
     white-space: nowrap;
     padding: 20px;
     width: 100%;
+    justify-content: flex-start;
+}
+
+.scroll-content-cueInput {
+    display: flex;
+    flex-wrap: nowrap; /* Prevents wrapping */
+    gap: 1%;
+    min-width: max-content; /* Ensures it expands properly */
+}
+
+  .section {
+    border: 3px solid #578493;
+    border-radius: 10px;
+    margin-bottom: 10px;
+    min-width: 325px;
+    text-wrap: auto;
+}
+
+.cueNumber {
+    background-color: #fff6ee;
+    color: #1b1c1d;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-width: 33px;
+    max-width: 33px;
+    min-height: 33px;
+    max-height: 33px;
+}
+  
+.vertical-line {
+    width: 3px;
+    height: 45px; /* Adjust as needed */
+    background-color: #578493;
+    border-radius: 10px;
+    margin-right: 0;
   }
   
-  .scroll-content {
-    display: inline-flex;
-    gap: 2%;
-  }
