--- a/src/Pages/Admin Page/AdminPage.css
+++ b/src/Pages/Admin Page/AdminPage.css
@@ -23,7 +23,8 @@
   
   .AdminPage-Cue {
     width: 300px;
-    height: 700px;
+    min-height: 650px;
+    height: auto;
     background-color: #1b1c1d;
     color: #fff6ee;
     border-radius: 5%;
