cue highlighting works in admin page

--- a/src/Pages/Admin Page/AdminPage.css
+++ b/src/Pages/Admin Page/AdminPage.css
@@ -25,8 +25,8 @@
     width: 300px;
     min-height: 650px;
     height: auto;
-    background-color: #1b1c1d;
-    color: #fff6ee;
+    background-color: #151515;
+    color: #918b85;
     border-radius: 5%;
     box-shadow:
       0 4px 8px 0 rgba(0, 0, 0, 0.2),
@@ -34,6 +34,12 @@
     padding: 0;
     flex-shrink: 0;
     box-sizing: content-box;
+    transition: background-color 0.3s ease, color 0.3s ease;
+  }
+
+  .highlighted-cue {
+    background-color: #1b1c1d;
+    color: #fff6ee;
   }
 
   .controlPanel-AdminPage{
@@ -49,16 +55,60 @@
     justify-content: center;
     align-items: center;
   }
-  
-  .section {
+
+  .controlPanelSection {
     border: 3px solid #578493;
     height: auto;
     border-radius: 10px;
     margin-bottom: 10px;
     min-width: 280px;
     text-wrap: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
   
+  .section {
+    border: 3px solid #173038;
+    height: auto;
+    border-radius: 10px;
+    margin-bottom: 10px;
+    min-width: 280px;
+    text-wrap: auto;
+  }
+
+  .highlightedSection {
+    border: 3px solid #578493;
+    height: auto;
+    border-radius: 10px;
+    margin-bottom: 10px;
+    min-width: 280px;
+    text-wrap: auto;
+    transition: border 0.3s ease, color 0.3s ease;
+  }
+  
+  .hrAdminPage{
+    border-top: 3px solid #173038;
+    border-radius: 10px;
+    min-width: 200px;
+    margin-top: 10;
+    margin-bottom: 0;
+    border-style: solid;
+    opacity: 1;
+    margin-left: -12;
+  }
+
+  .highlightedHrAdminPage{
+    border-top: 3px solid #578493;
+    border-radius: 10px;
+    min-width: 200px;
+    margin-top: 10;
+    margin-bottom: 0;
+    border-style: solid;
+    opacity: 1;
+    margin-left: -12;
+  }
+
   .scroll-container-AdminPage {
     display: flex;
     overflow-x: auto;
@@ -76,6 +126,18 @@
   }
   
   .cueNumber {
+    background-color: #918b85;
+    color: #1b1c1d;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 33px;
+    height: 33px;
+    transition: background-color 0.3s ease, color 0.3s ease;
+  }
+
+  .highlightedCueNumber {
     background-color: #fff6ee;
     color: #1b1c1d;
     border-radius: 10px;
@@ -87,6 +149,14 @@
   }
   
   .vertical-line {
+    width: 3px;
+    height: 45px; /* Adjust as needed */
+    background-color: #173038;
+    border-radius: 10px;
+    margin-right: 0;
+  }
+
+  .highlightedVertical-line {
     width: 3px;
     height: 45px; /* Adjust as needed */
     background-color: #578493;
