--- a/src/Pages/Home Page/HomePage.css
+++ b/src/Pages/Home Page/HomePage.css
@@ -74,7 +74,7 @@
 
 .logout-button {
   background-color: #578493;
-  color: #1b1c1d;
+  color: #fff6ee;
   border: none;
   padding: 10px 15px;
   cursor: pointer;
